<resources>
    <string name="app_name">"ZXing Orient"</string>
    <string name="action_settings">Settings</string>
    <string name="info_string">Tap on a Button to Scan and see the Result here.</string>
    <string name="one_d_barcode">1D Barcodes</string>
    <string name="two_d_barcode">2D Barcodes</string>
    <string name="qr_code">QR Code</string>
    <string name="default_code">Default</string>
    <string name="generate_barcodes">Generate Barcodes</string>
    <string name="encode_text_hint">Type something here &#8230;</string>
    <string name="scan_barcodes">Scan Barcodes</string>
    <string name="for_more_info">For More Info</string>
    <string name="check_github">Check out the Github Repo !!</string>
    <string name="codabar">CODABAR</string>
    <string name="data_matrix">DATA MATRIX</string>
    <string name="aztec">AZTEC</string>
    <string name="code_128">CODE 128</string>
    <string name="share_text">share Text</string>
    <string name="share">share</string>
    <string name="generate_qr">Generate QR Code</string>
    <string name="title_about">About</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">This App needs to access Camera to present you with the Demo.</string>
    <string name="permission_vibrate_rationale">Vibration Permission is required to present you with the Demo.</string>

    <string name="define_ActionBarSherlock"/>
    <string name="library_ActionBarSherlock_author">Sudar Abisheck</string>
    <string name="library_ActionBarSherlock_authorWebsite">http://www.sudar.me</string>
    <string name="library_ActionBarSherlock_libraryName">Zxing Orient</string>
    <string name="library_ActionBarSherlock_libraryDescription">An Android Library based on ZXing Library
        with support for `Portrait Orientation` and some cool stuffs.</string>
    <string name="library_ActionBarSherlock_libraryVersion">2.0.0</string>
    <string name="library_ActionBarSherlock_libraryWebsite">https://github.com/SudarAbisheck/ZXing-Orient</string>
    <string name="library_ActionBarSherlock_licenseId">apache_2_0</string>
    <string name="library_ActionBarSherlock_isOpenSource">true</string>
    <string name="library_ActionBarSherlock_repositoryLink">https://github.com/SudarAbisheck/ZXing-Orient</string>
    <string name="about">About</string>

</resources>
